compiler-plugin/testData/diagnostics/internalConfigSelector.kt
@ContributesConfigSelector
internal object <!TARGET_MUST_BE_PUBLIC!>FooConfigSelector<!> : DebuggableConfigSelector
